--- a/agent/railway.toml
+++ b/agent/railway.toml
@@ -1,11 +1,7 @@
 [build]
-builder = "NIXPACKS"
-
-[build.nixpacks]
-# Install Playwright system dependencies
-aptPkgs = ["libglib2.0-0", "libnspr4", "libnss3", "libdbus-1-3", "libatk1.0-0", "libatk-bridge2.0-0", "libcups2", "libxcb1", "libxcomposite1", "libxdamage1", "libxext6", "libxfixes3", "libxrandr2", "libgbm1", "libcairo2", "libpango-1.0-0", "libasound2"]
+builder = "DOCKERFILE"
+dockerfilePath = "Dockerfile"
 
 [deploy]
-startCommand = "playwright install chromium && PYTHONPATH=/app python -m agent.main"
 healthcheckPath = "/health"
 healthcheckTimeout = 300
