--- a/agent/.env.example
+++ b/agent/.env.example
@@ -7,10 +7,18 @@ GEMINI_API_KEY=your_gemini_api_key_here
 GRIST_API_KEY=your_grist_api_key_here
 GRIST_DOC_ID=b2r9qYM2Lr9xJ2epHVV1K2
 
+AUTH_USER=username
+AUTH_PASSWORD=password
+
+COOKIE_HTTPS_ONLY=false
+SESSION_SECRET=RdwnQfPGeVk2pi6W
+
 # Server settings (optional)
 HOST=0.0.0.0
 PORT=8000
 LOG_LEVEL=info
+COOKIE_HTTPS_ONLY=false
+SESSION_SECRET=RdwnQfPGeVk2pi6W
 
 # Browser settings (optional)
 HEADLESS=true
