--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview --host 0.0.0.0 --port 4173"
   },
   "dependencies": {
+    "@tiptap/extension-link": "^3.20.0",
+    "@tiptap/markdown": "^3.20.0",
+    "@tiptap/starter-kit": "^3.20.0",
+    "@tiptap/vue-3": "^3.20.0",
+    "dompurify": "^3.0.0",
+    "markdown-it": "^14.0.0",
     "vue": "^3.4.0"
   },
   "devDependencies": {
@@ -16,5 +22,8 @@
     "typescript": "^5.3.0",
     "vite": "^5.0.0",
     "vue-tsc": "^2.0.0"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-musl": "4.57.1"
   }
 }
